Added new top bars

--- a/_factory_topBars.html
+++ b/_factory_topBars.html
@@ -16,14 +16,14 @@
         <section id="pd-topBar-1" class="pd-topBar-1">
             <div class="container">
                 <div class="row">
-                    <div class="col-md-6 pb-2 pt-2">
+                    <div class="col-md-6 pb-1 pt-1">
                         <a name="anchor" href="tel:07976361908"><strong>Phone:</strong> 07976 361908</a>
-                        <a name="anchor" href="mailto:tim@fortmarketing.co.uk" class="ps-2"><strong>Email:</strong> tim@fortmarketing.co.uk</a>                          
+                        <a name="anchor" href="mailto:tim@fortmarketing.co.uk" class="ps-2"><strong>Email:</strong> tim@fortmarketing.co.uk</a> 
                     </div>
-                    <div class="col-md-6 d-flex flex-row justify-content-end pb-2 pt-2">
+                    <div class="col-md-6 d-flex flex-row justify-content-end pb-1 pt-1">
                         <a name="anchor" href="https://www.twitter.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" src="images/design-assets/icon-twitter-share.svg" alt="twitter icon"></a>
                         <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-1-social-icon"><img src="images/design-assets/icon-facebook-share.svg" width="28" height="28" alt="facebook icon"></a>
-                        <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" src="images/design-assets/icon-linkedin-share.svg" alt="linkedin icon"></a>                          
+                        <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" src="images/design-assets/icon-linkedin-share.svg" alt="linkedin icon"></a> 
                     </div>
                 </div>
             </div>
@@ -34,12 +34,12 @@
                 <div class="row">
                     <div class="col-md-6 pb-2 pt-2">
                         <a name="anchor" href="tel:07976361908"><strong>Phone:</strong> 07976 361908</a>
-                        <a name="anchor" href="mailto:tim@fortmarketing.co.uk" class="ps-2"><strong>Email:</strong> tim@fortmarketing.co.uk</a>                          
+                        <a name="anchor" href="mailto:tim@fortmarketing.co.uk" class="ps-2"><strong>Email:</strong> tim@fortmarketing.co.uk</a> 
                     </div>
                     <div class="col-md-6 d-flex flex-row justify-content-end pb-2 pt-2">
                         <a name="anchor" href="https://www.twitter.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="twitter icon" src="images/design-assets/icon-twitter.svg"></a>
                         <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="facebook icon" src="images/design-assets/icon-facebook.svg"></a>
-                        <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="linkedin icon" src="images/design-assets/icon-linkedin.svg"></a>                          
+                        <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="linkedin icon" src="images/design-assets/icon-linkedin.svg"></a> 
                     </div>
                 </div>
             </div>
@@ -50,16 +50,63 @@
                 <div class="row">
                     <div class="col-md-6 pb-2 pt-2">
                         <a name="anchor" href="tel:07976361908"><strong>Phone:</strong> 07976 361908</a>
-                        <a name="anchor" href="mailto:tim@fortmarketing.co.uk" class="ps-2"><strong>Email:</strong> tim@fortmarketing.co.uk</a>                          
+                        <a name="anchor" href="mailto:tim@fortmarketing.co.uk" class="ps-2"><strong>Email:</strong> tim@fortmarketing.co.uk</a> 
                     </div>
                     <div class="col-md-6 d-flex flex-row justify-content-end pb-2 pt-2">
                         <a name="anchor" href="https://www.twitter.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="twitter icon" src="images/design-assets/icon-twitter.svg"></a>
                         <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="facebook icon" src="images/design-assets/icon-facebook.svg"></a>
-                        <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="linkedin icon" src="images/design-assets/icon-linkedin.svg"></a>                          
+                        <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="linkedin icon" src="images/design-assets/icon-linkedin.svg"></a> 
                     </div>
                 </div>
             </div>
         </section>
+        <section class="pb-5 pt-5"></section>
+        <section id="pd-topBar-4" class="pd-topBar-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 d-flex flex-row">
+                        <div class="p-2" style="border-right: 1px solid #dee2e6;">
+                            <a name="anchor" href="tel:07976361908"> <span><img src="images/design-assets/icon-phone-color.svg" alt="icon phone" width="16" height="16" class="me-1"></span>07976 361908</a>
+                        </div>
+                        <div class="p-2">
+                            <a name="anchor" href="mailto:tim@fortmarketing.co.uk"> <span><img height="16" src="images/design-assets/icon-email-primary.svg" class="me-1"></span>tim@fortmarketing.co.uk</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex flex-row justify-content-end">
+                        <div class="p-2">
+                            <a name="anchor" href="https://www.twitter.com" class="pd-topBar-4-social-icon"><img width="28" height="28" src="images/design-assets/icon-twitter-share.svg" alt="twitter icon"></a>
+                            <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-4-social-icon"><img src="images/design-assets/icon-facebook-share.svg" width="28" height="28" alt="facebook icon"></a>
+                            <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-4-social-icon"><img width="28" height="28" src="images/design-assets/icon-linkedin-share.svg" alt="linkedin icon"></a>
+                        </div>
+                        <a class="ms-2 p-2 pd-topBar-4-btn" style="flex-direction: row; align-items: center;"><span>Request a quote<img src="images/design-assets/icon-quote-01.svg" class="ms-2"></span></a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section id="pd-topBar-5" class="bg-primary pd-topBar-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 d-flex flex-row">
+                        <div class="p-2" style="border-right: 1px solid #ffffff;">
+                            <a name="anchor" href="tel:07976361908"> <span><img alt="icon phone" width="16" height="16" class="me-1" src="images/design-assets/icon-phone.svg"></span>07976 361908</a>
+                        </div>
+                        <div class="p-2">
+                            <a name="anchor" href="mailto:tim@fortmarketing.co.uk"> <span><img height="16" src="images/design-assets/icon-email.svg" class="me-1"></span>tim@fortmarketing.co.uk</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex flex-row justify-content-end">
+                        <div class="p-2">
+                            <a name="anchor" href="https://www.twitter.com" class="pd-topBar-5-social-icon"><img width="28" height="28" alt="twitter icon" src="images/design-assets/icon-twitter.svg"></a>
+                            <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-5-social-icon"><img width="28" height="28" alt="facebook icon" src="images/design-assets/icon-facebook.svg"></a>
+                            <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-5-social-icon"><img width="28" height="28" alt="linkedin icon" src="images/design-assets/icon-linkedin.svg"></a>
+                        </div>
+                        <a class="ms-2 p-2 pd-topBar-5-btn" style="flex-direction: row; align-items: center;"><span>Request a quote<img src="images/design-assets/icon-quote-01.svg" class="ms-2"></span></a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
