--- a/_factory_topBars.html
+++ b/_factory_topBars.html
@@ -107,6 +107,78 @@
             </div>
         </section>
         <section class="pb-5 pt-5"></section>
+        <section id="pd-topBar-6" class="pd-topBar-6">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 d-flex flex-row">
+                        <div class="p-2">
+                            <a name="anchor" href="tel:07976361908"> <span><img src="images/design-assets/icon-phone-info.svg" alt="icon phone" width="16" height="16" class="me-1"></span>07976 361908</a>
+                        </div>
+                        <div class="p-2">
+                            <a name="anchor" href="mailto:tim@fortmarketing.co.uk"> <span><img height="16" src="images/design-assets/icon-email-info.svg" class="me-1"></span>tim@fortmarketing.co.uk</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex flex-row justify-content-end">
+                        <div class="p-2">
+                            <a name="anchor" href="https://www.twitter.com" class="pd-topBar-6-social-icon"><img width="28" height="28" src="images/design-assets/icon-twitter-share.svg" alt="twitter icon"></a>
+                            <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-6-social-icon"><img src="images/design-assets/icon-facebook-share.svg" width="28" height="28" alt="facebook icon"></a>
+                            <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-6-social-icon"><img width="28" height="28" src="images/design-assets/icon-linkedin-share.svg" alt="linkedin icon"></a>
+                        </div>
+                        <a class="ms-2 p-2 pd-topBar-6-btn" style="flex-direction: row; align-items: center;"><span>Request a quote<img src="images/design-assets/arrow-nav-right.svg" alt="icon array right" width="4" class="ms-1 " height="7"></span></a> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section id="pd-topBar-7" class="pd-topBar-7">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 d-flex flex-row">
+                        <div class="align-items-center d-flex flex-row p-2">
+                            <img src="images/design-assets/icon-arrow-primary.svg" alt="icon arrow" width="16" height="16">
+                            <p class="ps-2">Bold strapline about your business</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6 d-flex flex-row justify-content-end">
+                        <div class="align-items-center d-flex flex-row justify-content-end">
+                            <a href="#" name="anchor" class="btn btn-outline-info">Request Quote</a>
+                        </div>
+                        <div class="pb-2 pe-0 ps-4 pt-2">
+                            <a name="anchor" href="https://www.twitter.com" class="pd-topBar-7-social-icon"><img width="28" height="28" src="images/design-assets/icon-twitter-share.svg" alt="twitter icon"></a>
+                            <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-7-social-icon"><img src="images/design-assets/icon-facebook-share.svg" width="28" height="28" alt="facebook icon"></a>
+                            <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-7-social-icon"><img width="28" height="28" src="images/design-assets/icon-linkedin-share.svg" alt="linkedin icon"></a>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section id="pd-topBar-8" class="bg-light pb-2 pd-topBar-8 pt-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>Bold Strapline about your business</p>                          
+                    </div>
+                    <div class="col-md-6 d-flex flex-row justify-content-end">
+                        <p>Call us on:&nbsp;<a href="tel:07976361908" name="anchor">07976 361908</a> or email us: <a href="mailto:tim@fortmarketing.co.uk">tim@fortmarketing.co.uk</a></p>                          
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section id="pd-topBar-9" class="bg-primary pb-2 pd-topBar-9 pt-2"> 
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <p>Bold Strapline about your business</p> 
+                    </div>
+                    <div class="col-md-6 d-flex flex-row justify-content-end">
+                        <p>Call us on:&nbsp;<a href="tel:07976361908" name="anchor">07976 361908</a> or email us: <a href="mailto:tim@fortmarketing.co.uk">tim@fortmarketing.co.uk</a></p> 
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
