Started nav bar

--- a/_factory_mainNavs.html
+++ b/_factory_mainNavs.html
@@ -13,8 +13,24 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
-</div>
+        <section id="pd-mainNav-1">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-auto d-flex flex-column justify-content-center" style="height: 80px;">
+                        <a href="/" name="anchor" style="display: inline-block;"><img src="images/design-assets/fort-logo.svg" height="60" width="155" alt="Logo"></a>                          
+                    </div>
+                    <div class="col-md">
+                        <nav class="align-items-center d-flex flex-row justify-content-end" style="height: 100%;">
+                            <a href="#" name="anchor" style="padding-left: 10px; padding-right: 10px; font-weight: 700; text-decoration: none;">About</a>
+                            <a href="#" name="anchor" style="padding-left: 10px; padding-right: 10px; font-weight: 700; text-decoration: none;">Services</a>
+                            <a href="#" name="anchor" style="padding-left: 10px; padding-right: 10px; font-weight: 700; text-decoration: none;">Portfolio</a>
+                            <a href="#" name="anchor" style="padding-left: 10px; padding-right: 10px; font-weight: 700; text-decoration: none;">FAQs</a>
+                            <a href="#" name="anchor" class="btn btn-info ">Request Quote</a>
+                        </nav>                                                  
+                    </div>
+                </div>
+            </div>
+        </section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
