Sorted focus outlines on top nav bar

--- a/_factory_mainNavs.html
+++ b/_factory_mainNavs.html
@@ -42,7 +42,7 @@
                                 </div>
                                 <a href="#" name="anchor">Portfolio</a>
                                 <a href="#" name="anchor">FAQs</a>
-                                <a href="#" name="anchor" class="btn btn-info ">Request Quote</a>
+                                <a href="#" name="anchor" class="btn btn-info ">Request Quote<span><img src="images/design-assets/icon-quote-01.svg" width="20" height="20" class="ms-2"></span></a>
                             </div>
                             <div class="pd-mainNav-hamburger-1">
                                 <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
