--- a/_factory_topBars.html
+++ b/_factory_topBars.html
@@ -78,7 +78,7 @@
                             <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-4-social-icon"><img src="images/design-assets/icon-facebook-share.svg" width="28" height="28" alt="facebook icon"></a>
                             <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-4-social-icon"><img width="28" height="28" src="images/design-assets/icon-linkedin-share.svg" alt="linkedin icon"></a>
                         </div>
-                        <a class="ms-2 p-2 pd-topBar-4-btn" style="flex-direction: row; align-items: center;"><span>Request a quote<img src="images/design-assets/icon-quote-01.svg" class="ms-2"></span></a> 
+                        <a href="#" class="ms-2 p-2 pd-topBar-4-btn" style="flex-direction: row; align-items: center;"><span>Request a quote<img src="images/design-assets/icon-quote-01.svg" class="ms-2"></span></a> 
                     </div>
                 </div>
             </div>
@@ -101,7 +101,7 @@
                             <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-5-social-icon"><img width="28" height="28" alt="facebook icon" src="images/design-assets/icon-facebook.svg"></a>
                             <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-5-social-icon"><img width="28" height="28" alt="linkedin icon" src="images/design-assets/icon-linkedin.svg"></a>
                         </div>
-                        <a class="ms-2 p-2 pd-topBar-5-btn" style="flex-direction: row; align-items: center;"><span>Request a quote<img src="images/design-assets/icon-quote-01.svg" class="ms-2"></span></a> 
+                        <a href="#" class="ms-2 p-2 pd-topBar-5-btn" style="flex-direction: row; align-items: center;"><span>Request a quote<img src="images/design-assets/icon-quote-01.svg" class="ms-2"></span></a> 
                     </div>
                 </div>
             </div>
@@ -124,7 +124,7 @@
                             <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-6-social-icon"><img src="images/design-assets/icon-facebook-share.svg" width="28" height="28" alt="facebook icon"></a>
                             <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-6-social-icon"><img width="28" height="28" src="images/design-assets/icon-linkedin-share.svg" alt="linkedin icon"></a>
                         </div>
-                        <a class="ms-2 p-2 pd-topBar-6-btn" style="flex-direction: row; align-items: center;"><span>Request a quote<img src="images/design-assets/arrow-nav-right.svg" alt="icon array right" width="4" class="ms-1 " height="7"></span></a> 
+                        <a href="#" class="ms-2 p-2 pd-topBar-6-btn" style="flex-direction: row; align-items: center;"><span>Request a quote<img src="images/design-assets/arrow-nav-right.svg" alt="icon array right" width="4" class="ms-1 " height="7"></span></a> 
                     </div>
                 </div>
             </div>
@@ -157,10 +157,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <p>Bold Strapline about your business</p>                          
+                        <p>Bold Strapline about your business</p> 
                     </div>
                     <div class="col-md-6 d-flex flex-row justify-content-end">
-                        <p>Call us on:&nbsp;<a href="tel:07976361908" name="anchor">07976 361908</a> or email us: <a href="mailto:tim@fortmarketing.co.uk">tim@fortmarketing.co.uk</a></p>                          
+                        <p>Call us on:&nbsp;<a href="tel:07976361908" name="anchor">07976 361908</a> or email us: <a href="mailto:tim@fortmarketing.co.uk">tim@fortmarketing.co.uk</a></p> 
                     </div>
                 </div>
             </div>
