--- a/index.html
+++ b/index.html
@@ -13,8 +13,64 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <div class="container">
-</div>
+        <header>
+            <section id="pd-topBar-3" class="pd-topBar-3">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6 pb-2 pt-2">
+                            <a name="anchor" href="tel:07976361908"><strong>Phone:</strong> 07976 361908</a>
+                            <a name="anchor" href="mailto:tim@fortmarketing.co.uk" class="ps-2"><strong>Email:</strong> tim@fortmarketing.co.uk</a> 
+                        </div>
+                        <div class="col-md-6 d-flex flex-row justify-content-end pb-2 pt-2">
+                            <a name="anchor" href="https://www.twitter.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="twitter icon" src="images/design-assets/icon-twitter.svg"></a>
+                            <a name="anchor" href="https://www.facebook.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="facebook icon" src="images/design-assets/icon-facebook.svg"></a>
+                            <a name="anchor" href="https://www.linkedin.com" class="ms-2 pd-topBar-1-social-icon"><img width="28" height="28" alt="linkedin icon" src="images/design-assets/icon-linkedin.svg"></a> 
+                        </div>
+                    </div>
+                </div>
+            </section>
+            <section id="pd-mainNav-1" class="pd-mainNav-1">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-auto d-flex flex-column justify-content-center" style="height: 100px;">
+                            <a href="/" name="anchor" style="display: inline-block;"><img src="images/design-assets/fort-logo.svg" height="60" width="155" alt="Logo"></a> 
+                        </div>
+                        <div class="col">
+                            <nav>
+                                <div class="pd-mainNav-inner-1">
+                                    <a href="#" name="anchor">About</a>
+                                    <div class="dropdown">
+                                        <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                                        <ul class="dropdown-menu" aria-labelledby="dropDown1">
+                                            <li>
+                                                <a class="dropdown-item" href="#">Service 1</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="#">Service 2</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="#">Service 3</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="#">Service 4</a>
+                                            </li>                                             
+                                        </ul>
+                                    </div>
+                                    <a href="#" name="anchor">Portfolio</a>
+                                    <a href="#" name="anchor">FAQs</a>
+                                    <a href="#" name="anchor" class="btn btn-info "><span><img src="images/design-assets/icon-quote-01.svg" width="20" height="20" class="me-1"></span>Request Quote</a>
+                                </div>
+                                <div class="pd-mainNav-hamburger-1">
+                                    <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
+                                        <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
+                                    </button>
+                                </div>
+                            </nav>                             
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </header>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
