--- a/_factory_mainNavs.html
+++ b/_factory_mainNavs.html
@@ -22,7 +22,7 @@
                     <div class="col">
                         <nav>
                             <div class="pd-mainNav-inner-1">
-                                <a href="#" name="anchor">About</a>
+                                <a href="#" name="anchor" class="pd-pageActive-1">About</a>
                                 <div class="dropdown">
                                     <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                                     <ul class="dropdown-menu" aria-labelledby="dropDown1">
@@ -33,7 +33,7 @@
                                             <a class="dropdown-item" href="#">Service 2</a>
                                         </li>
                                         <li>
-                                            <a class="dropdown-item" href="#">Service 3</a>
+                                            <a class="dropdown-item pd-pageActive-1" href="#">Service 3</a>
                                         </li>
                                         <li>
                                             <a class="dropdown-item" href="#">Service 4</a>
@@ -45,6 +45,92 @@
                                 <a href="#" name="anchor" class="btn btn-info ">Request Quote<span><img src="images/design-assets/icon-quote-01.svg" width="20" height="20" class="ms-2"></span></a>
                             </div>
                             <div class="pd-mainNav-hamburger-1">
+                                <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
+                                    <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
+                                </button>
+                            </div>
+                        </nav>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section id="pd-mainNav-2" class="pd-mainNav-2">
+            <div class="container">
+                <div class="row">
+                    <div class="col-auto d-flex flex-column justify-content-center" style="height: 100px;">
+                        <a href="/" name="anchor" style="display: inline-block;"><img src="images/design-assets/fort-logo.svg" height="60" width="155" alt="Logo"></a> 
+                    </div>
+                    <div class="col">
+                        <nav>
+                            <div class="pd-mainNav-inner-2">
+                                <a href="#" name="anchor" class="pd-pageActive-2">About</a>
+                                <div class="dropdown">
+                                    <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropDown1">
+                                        <li>
+                                            <a class="dropdown-item" href="#">Service 1</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">Service 2</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item pd-pageActive-2" href="#">Service 3</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">Service 4</a>
+                                        </li>                                         
+                                    </ul>
+                                </div>
+                                <a href="#" name="anchor">Portfolio</a>
+                                <a href="#" name="anchor">Resources</a>
+                                <a href="#" name="anchor">FAQs</a>
+                            </div>
+                            <div class="pd-mainNav-hamburger-2">
+                                <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
+                                    <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
+                                </button>
+                            </div>
+                        </nav>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
+        <section id="pd-mainNav-3" class="pd-mainNav-3">
+            <div class="container">
+                <div class="row">
+                    <div class="col-auto d-flex flex-column justify-content-center" style="height: 100px;">
+                        <a href="/" name="anchor" style="display: inline-block;"><img src="images/design-assets/fort-logo.svg" height="60" width="155" alt="Logo"></a> 
+                    </div>
+                    <div class="col">
+                        <nav>
+                            <div class="pd-mainNav-inner-3">
+                                <div>
+                                    <a href="#" name="anchor" class="pd-pageActive-3">About</a>
+                                    <div class="dropdown">
+                                        <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                                        <ul class="dropdown-menu" aria-labelledby="dropDown1">
+                                            <li>
+                                                <a class="dropdown-item" href="#">Service 1</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="#">Service 2</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item pd-pageActive-3" href="#">Service 3</a>
+                                            </li>
+                                            <li>
+                                                <a class="dropdown-item" href="#">Service 4</a>
+                                            </li>                                             
+                                        </ul>
+                                    </div>
+                                    <a href="#" name="anchor">Portfolio</a>
+                                    <a href="#" name="anchor">FAQs</a>
+                                </div>
+                                <a href="#" name="anchor" class="btn btn-info ">Request Quote<span><img src="images/design-assets/icon-quote-01.svg" width="20" height="20" class="ms-2"></span></a>
+                            </div>
+                            <div class="pd-mainNav-hamburger-3">
                                 <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
                                     <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
                                 </button>
