--- a/index.html
+++ b/index.html
@@ -29,16 +29,18 @@
                     </div>
                 </div>
             </section>
-            <section id="pd-mainNav-1" class="pd-mainNav-1">
+        </header>
+        <header style="position: relative;">
+            <section id="pd-mainNav-4" class="pd-mainNav-4" style="z-index: 1000; position: relative;">
                 <div class="container">
                     <div class="row">
                         <div class="col-auto d-flex flex-column justify-content-center" style="height: 100px;">
-                            <a href="/" name="anchor" style="display: inline-block;"><img src="images/design-assets/fort-logo.svg" height="60" width="155" alt="Logo"></a> 
+                            <a href="/" name="anchor" style="display: inline-block;"><img height="60" width="155" alt="Logo" src="images/design-assets/fort-logo-white.svg"></a> 
                         </div>
                         <div class="col">
                             <nav>
-                                <div class="pd-mainNav-inner-1">
-                                    <a href="#" name="anchor">About</a>
+                                <div class="pd-mainNav-inner-4">
+                                    <a href="#" name="anchor" class="pd-pageActive-4">About</a>
                                     <div class="dropdown">
                                         <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
                                         <ul class="dropdown-menu" aria-labelledby="dropDown1">
@@ -49,7 +51,7 @@
                                                 <a class="dropdown-item" href="#">Service 2</a>
                                             </li>
                                             <li>
-                                                <a class="dropdown-item" href="#">Service 3</a>
+                                                <a class="dropdown-item pd-pageActive-2" href="#">Service 3</a>
                                             </li>
                                             <li>
                                                 <a class="dropdown-item" href="#">Service 4</a>
@@ -57,10 +59,10 @@
                                         </ul>
                                     </div>
                                     <a href="#" name="anchor">Portfolio</a>
+                                    <a href="#" name="anchor">Resources</a>
                                     <a href="#" name="anchor">FAQs</a>
-                                    <a href="#" name="anchor" class="btn btn-info "><span><img src="images/design-assets/icon-quote-01.svg" width="20" height="20" class="me-1"></span>Request Quote</a>
                                 </div>
-                                <div class="pd-mainNav-hamburger-1">
+                                <div class="pd-mainNav-hamburger-4">
                                     <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
                                         <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
                                     </button>
@@ -69,6 +71,9 @@
                         </div>
                     </div>
                 </div>
+            </section>
+            <section style="height: 800px; margin-top: -106px; position: relative;">
+                <img style="position: absolute; width: 100%; height: 100%; object-fit: cover; object-position: center center;" src="images/uploads/hero-sample-2.jpg">
             </section>
         </header>
         <!-- Bootstrap core JavaScript
