Added js to scissors app nav

--- a/_factory_mainNavs.html
+++ b/_factory_mainNavs.html
@@ -175,7 +175,7 @@
                                 </div>
                                 <div class="pd-mainNav-hamburger-4">
                                     <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
-                                        <span class="hamburger-box"> <span class="hamburger-inner"></span> </span>
+                                        <span class="hamburger-box"> <span class="hamburger-inner hamburger-inverted"></span> </span>
                                     </button>
                                 </div>
                             </nav>                             
@@ -188,10 +188,53 @@
             </section>
         </header>
         <section class="pb-5 pt-5"></section>
+        <section id="pd-mainNav-5" class="pd-mainNav-5">
+            <div class="container">
+                <div class="row">
+                    <div class="col-auto d-flex flex-column justify-content-center" style="height: 78px;">
+                        <a href="/" name="anchor" style="display: inline-block;"><img height="50" width="156" alt="Logo" src="images/design-assets/fort-logo-white.svg" id="logo"></a> 
+                    </div>
+                    <div class="col">
+                        <nav>
+                            <div class="pd-mainNav-inner-5">
+                                <a href="#" name="anchor" class="pd-pageActive-5">About</a>
+                                <div class="dropdown">
+                                    <a class="dropdown-toggle" href="#" role="button" id="dropDown1" data-bs-toggle="dropdown" aria-expanded="false">Services</a>
+                                    <ul class="dropdown-menu" aria-labelledby="dropDown1">
+                                        <li>
+                                            <a class="dropdown-item" href="#">Service 1</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">Service 2</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item pd-pageActive-5" href="#">Service 3</a>
+                                        </li>
+                                        <li>
+                                            <a class="dropdown-item" href="#">Service 4</a>
+                                        </li>                                         
+                                    </ul>
+                                </div>
+                                <a href="#" name="anchor">Portfolio</a>
+                                <a href="#" name="anchor">FAQs</a>
+                                <a href="#" name="anchor" class="btn btn-outline-light">Login</a>
+                            </div>
+                            <div class="pd-mainNav-hamburger-5">
+                                <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
+                                    <span class="hamburger-box"> <span class="hamburger-inner hamburger-inverted"></span> </span>
+                                </button>
+                            </div>
+                        </nav>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
-        <script src="assets/js/popper.min.js"></script>
-        <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/js/popper.min.js"></script>
+        <script src="/bootstrap/js/bootstrap.min.js"></script>
+        <script src="/assets/js/functions.js"></script>
     </body>
 </html>
