added new way of doing nav with uls and lis

--- a/_factory_mainNavs.html
+++ b/_factory_mainNavs.html
@@ -230,6 +230,52 @@
             </div>
         </section>
         <section class="pb-5 pt-5"></section>
+        <section id="pd-mainNav-6" class="pd-mainNav-6">
+            <div class="container">
+                <div class="row" style="position: relative;">
+                    <div class="col-auto d-flex flex-column justify-content-center" style="height: 78px; position: relative; z-index: 1000;">
+                        <a href="/" name="anchor" style="display: inline-block;"><img height="50" width="156" alt="Logo" src="images/design-assets/fort-logo-white.svg" id="logo"></a> 
+                    </div>
+                    <div class="col">
+                        <nav>
+                            <div class="open pd-mainNav-inner-6">
+                                <ul> 
+                                    <li>
+                                        <a href="#" name="anchor" class="pd-pageActive-6">About</a>
+                                    </li>
+                                    <li class="pd-dropdown">
+                                        <a href="#" name="anchor" class="pd-dropdown-toggle">Services<span><img class="pd-dropdown-caret" width="8" height="5"></span></a>
+                                        <ul class="pd-dropdown-menu">
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Service 1</a>
+                                            </li>
+                                            <li>
+                                                <a class="pd-dropdown-item" href="#">Service 2</a>
+                                            </li>
+                                        </ul>
+                                    </li>                                     
+                                    <li>
+                                        <a href="#" name="anchor">Portfolio</a>
+                                    </li>                                     
+                                    <li>
+                                        <a href="#" name="anchor">FAQs</a>
+                                    </li>
+                                    <li>
+                                        <a href="#" name="anchor" class="btn btn-outline-light">Login</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="pd-mainNav-hamburger-6">
+                                <button class="hamburger hamburger--arrowalt" type="button" style="z-index: 900;" aria-label="Menu button for navigation">
+                                    <span class="hamburger-box"> <span class="hamburger-inner hamburger-inverted"></span> </span>
+                                </button>
+                            </div>
+                        </nav>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5"></section>
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
